testsuite/tests/typecheck/should_fail/T9858a.stderr

T9858a.hs:21:18: error:
    • Illegal qualified type:
        (() :: Constraint, () :: Constraint) => ()
    • In the expansion of type synonym ‘PX’
      In the newtype instance declaration for ‘F’
